# kotro-proxy-engine

./: .dockerignore  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  go.mod
.agents/: AGENTS.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  marketplace-publish.yml  release.yml
benchmarks/: cancel_storm.js  run_audit.sh  run_rust_audit.sh
benchmarks/eval-suite/: RESULTS.md  main.go  measure.go  results_tool.py  run.sh
cmd/mockupstream/: main.go
cmd/proxy/: main.go
deploy/helm/korto-proxy/: Chart.yaml  (+1 more)
distributions/: MARKETPLACE-AUTOMATION.md  MARKETPLACE-MANUAL.md  README.md  SECRETS.md
distributions/homebrew-tap/: README.md
distributions/npm-cli/: README.md  package.json
distributions/shared/: binary-target.js
distributions/vscode-extension/: .vscodeignore  README.md  package-lock.json  package.json
docs/: RUST-ARCHITECTURE.md
docs/guides/: CURSOR-BRIDGE.md  CURSOR-FIRST-RUN.md
docs/launch/: reddit-posts.md  show-hn-draft.md
docs/marketing/: show-hn-v0.1.0.md
docs/operations/: OBSERVABILITY-SPEC.md
docs/portfolio/: v0.1.0-release-evidence.md
docs/review/: 2026-07-strategic-review.md
docs/roadmap/: 90-DAY-ROADMAP.md  PROGRESS.md  next-steps.md
docs/security/: THREAT-MODEL.md
internal/cache/: semantic.go  store.go  store_test.go  strategy.go  strategy_test.go  ttl_test.go
internal/compressor/: context.go  context_test.go  scope.go
internal/config/: config.go
internal/dashboard/: handler.go  handler_test.go  page.html
internal/guardrail/: redactor.go  redactor_test.go
internal/metrics/: dashboard_state.go  dashboard_state_test.go  registry.go  registry_test.go
internal/middleware/: chain.go
internal/models/: anthropic.go  anthropic_test.go  openai.go  openai_test.go
internal/optimizer/: normalizer.go  normalizer_test.go
internal/proxy/: anthropic_handler.go  anthropic_handler_test.go  body.go  cache_strategy_test.go  failover_test.go  handler.go  handler_bench_test.go  handler_cancel_test.go  handler_test.go  middleware.go  middleware_test.go  observe.go  passthrough.go  scope.go  scope_test.go  sse_bootstrap.go  sse_bootstrap_test.go  stream.go  stream_replay_test.go  stream_watchdog_test.go
internal/server/: metrics_test.go  pprof.go  server.go  server_test.go
internal/sse/: stream_test.go
rust/: Cargo.toml
rust/korto-proxy/: Cargo.toml
rust/korto-proxy/src/: config.rs  server.rs
rust/korto-proxy/src/cache/: eviction.rs  mod.rs  semantic.rs  store.rs
rust/korto-proxy/src/compressor/: mod.rs
rust/korto-proxy/src/guardrail/: redaction_map.rs
rust/korto-proxy/src/models/: openai.rs
rust/korto-proxy/src/router/: handlers.rs  mod.rs
rust/kotro-core/: Cargo.toml  README.md
rust/kotro-core/src/: lib.rs
rust/kotro-core/src/cache/: key.rs  mod.rs  vector_index.rs
rust/kotro-core/src/compressor/: fingerprint.rs  mod.rs  shrink.rs
rust/kotro-core/src/guardrail/: map.rs  mod.rs  patterns.rs
rust/kotro-proxy/: Cargo.toml  debug.rs
rust/kotro-proxy/src/: config.rs  dashboard_assets.rs  lib.rs  main.rs  metrics.rs  server.rs
rust/kotro-proxy/src/budget/: mod.rs
rust/kotro-proxy/src/cache/: encoding.rs  entry.rs  eviction.rs  mod.rs  semantic.rs  store.rs  tool.rs  vector.rs
rust/kotro-proxy/src/compressor/: ast.rs  mod.rs  shrink.rs
rust/kotro-proxy/src/guardrail/: injection.rs  loop_detector.rs  mod.rs  redactor.rs
rust/kotro-proxy/src/models/: anthropic.rs  mod.rs  unified.rs
rust/kotro-proxy/src/optimizer/: mod.rs
rust/kotro-proxy/src/proxy/: bootstrap.rs  mod.rs  pipeline.rs  replay.rs
rust/kotro-proxy/src/router/: bridge_auth.rs  classifier.rs  handlers.rs  mod.rs  scope.rs  upstream.rs
rust/kotro-proxy/src/sse/: frame.rs  mod.rs
scripts/: demo-savings.sh  dev-up.sh  go-live.sh  install.sh  migrate-github-org.sh  package-extension-local.sh  post-release-homebrew.sh  sync-brand-icon.sh  update-homebrew-shas.sh
scripts/bench/: k6-anthropic.js  k6-cache-hit.js  k6-cache-miss.js  run.sh  vegeta.sh
(+19 files in other folders)
