[package]
name = "kotro-core"
description = "Embeddable semantic cache, PII redaction, and context compression for LLM proxy pipelines"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository = "https://github.com/kotro-labs/kotro-proxy-engine"
homepage = "https://github.com/kotro-labs/kotro-proxy-engine"
keywords = ["llm", "ai", "cache", "proxy", "redaction"]
categories = ["caching", "web-programming", "asynchronous"]
readme = "README.md"

[dependencies]
sha2 = "0.10"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

# Semantic (vector) cache — optional; enables MiniLM embedding-based fuzzy matching.
# Add feature "semantic" to pull in the full ML stack.
candle-core = { version = "0.9", optional = true }
candle-nn = { version = "0.9", optional = true }
candle-transformers = { version = "0.9", optional = true }
hf-hub = { version = "0.3", features = ["tokio"], optional = true }
tokenizers = { version = "0.21", optional = true }

[features]
default = []
# Enables on-device MiniLM embedding for fuzzy prompt-similarity lookups.
# Adds ~90 MB model download on first use; inference adds ~26-28ms per request.
semantic = ["candle-core", "candle-nn", "candle-transformers", "hf-hub", "tokenizers"]

[dev-dependencies]
