[package]
name = "kotro-proxy"
description = "High-performance Rust port of the Kotro local LLM proxy engine"
version = "0.6.0"
edition = "2021"
license.workspace = true
authors.workspace = true

[[bin]]
name = "kotro-proxy"
path = "src/main.rs"

[dependencies]
bytes = "1"
sha2 = "0.10"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
redb = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
futures-util = "0.3"
async-stream = "0.3"
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["json"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
http = "1"
regex = "1"
zstd = "0.13"
moka = { version = "0.12", features = ["sync"] }
ipnet = "2"
prometheus = "0.13"
parking_lot = "0.12"
tree-sitter = "0.23.0"
tree-sitter-rust = "0.23.0"
tree-sitter-python = "0.23.0"
candle-core = "0.11.0"
candle-nn = "0.11.0"
candle-transformers = "0.11.0"
hf-hub = "0.5.0"
tokenizers = "0.21"
extism = "1.30.0"
anyhow = "1.0.103"
tracing-opentelemetry = "0.33.0"
opentelemetry-otlp = { version = "0.32.0", features = ["reqwest-client", "http-proto"] }
opentelemetry_sdk = { version = "0.32.1", features = ["rt-tokio"] }
opentelemetry = "0.32.0"
opentelemetry-semantic-conventions = "0.32.1"
redis = { version = "1.3.0", features = ["tokio-comp", "connection-manager"] }

[dev-dependencies]
tempfile = "3"
tower = { version = "0.5", features = ["util"] }
hyper = "1"
http-body-util = "0.1"
